src/test/ui/error-codes/E0446.stderr
error[E0446]: private type `Bar` in public interface
  --> $DIR/E0446.rs:4:5
   |
LL |     struct Bar(u32);
   |     ---------------- `Bar` declared as private
LL | 
LL |     pub fn bar() -> Bar {
   |     ^^^^^^^^^^^^^^^^^^^ can't leak private type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0446`.
